--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
             width: 190px; 
             height: 190px; 
             border-radius: 50%; 
-            /* Border yahan se khatam kar diya gaya hai */
             border: none; 
             object-fit: cover; 
             display: block;
@@ -192,7 +191,7 @@
         
         <div class="bottom-part">
             <div class="social-list">
-                <a href="#" class="social-item">
+                <a href="https://www.snapchat.com/add/trendy_ammar" target="_blank" class="social-item">
                     <div class="social-info">
                         <i class="fab fa-snapchat"></i>
                         <span class="social-name">Snapchat</span>
@@ -200,10 +199,18 @@
                     <i class="fas fa-chevron-right arrow"></i>
                 </a>
 
-                <a href="#" class="social-item">
+                <a href="https://www.instagram.com/enthusiast_ammar" target="_blank" class="social-item">
                     <div class="social-info">
                         <i class="fab fa-instagram"></i>
                         <span class="social-name">Instagram</span>
+                    </div>
+                    <i class="fas fa-chevron-right arrow"></i>
+                </a>
+
+                <a href="https://www.tiktok.com/@ammarhassan_official" target="_blank" class="social-item">
+                    <div class="social-info">
+                        <i class="fab fa-tiktok"></i>
+                        <span class="social-name">Tiktok</span>
                     </div>
                     <i class="fas fa-chevron-right arrow"></i>
                 </a>
@@ -220,14 +227,6 @@
                     <div class="social-info">
                         <i class="fab fa-twitter"></i>
                         <span class="social-name">Twitter</span>
-                    </div>
-                    <i class="fas fa-chevron-right arrow"></i>
-                </a>
-
-                <a href="#" class="social-item">
-                    <div class="social-info">
-                        <i class="fab fa-tiktok"></i>
-                        <span class="social-name">Tiktok</span>
                     </div>
                     <i class="fas fa-chevron-right arrow"></i>
                 </a>
